Attempt to fix colour contrast accessibility issues

--- a/src/components/Home/IssueBlocks.scss
+++ b/src/components/Home/IssueBlocks.scss
@@ -84,8 +84,8 @@
       .count {
         display: inline-block;
         @include h4();
-        color: $secondary;
-        border-bottom: $secondary 2px dashed;
+        color: $primary;
+        border-bottom: $primary 2px dashed;
         margin-bottom: 40px;
 
         @include media-down(tablet) {
